fix(Input): make icon smaller if shown

--- a/src/Input/index.scss
+++ b/src/Input/index.scss
@@ -53,7 +53,7 @@
 
   .nds-input-icon {
     display: flex;
-    font-size: 2em;
+    font-size: 1.25em;
     padding: 0 0.3em 0 0;
     opacity: 0.5;
   }
